feat: 新增gpa绩点查询功能，优化课表响应数据
