# models/edu.go
@@ -28,10 +28,13 @@ type Schedule struct {
 }
 
 type Course struct {
+	Category string `json:"kcxz"`
+	Method   string `json:"khfsmc"`
 	Name     string `json:"kcmc"`
 	Teacher  string `json:"xm"`
+	ID       string `json:"kch_id"`
 	Location string `json:"cdmc"`
-	Time     string `json:"jc"`
+	Time     string `json:"jcor"`
 	WeekDay  string `json:"xqj"`
 	WeekS    string `json:"zcd"`
 }
